src/theme-gcwu-fegc/sass/includes/default-mobile.scss
/* ... */
#wb-main-in h1{
	position:static !important;
	font-size:1.1em;
	width:auto !important;
	background:#111;
	background:-webkit-linear-gradient(#3C3C3C, #111111) #111111;
	background:-moz-linear-gradient(#3C3C3C, #111111) #111111;
	border-bottom:1px solid #2A2A2A;
	border-top:1px solid #2A2A2A;
	color:#FFF;
	font-weight:700;
	text-shadow:0 -1px 1px #000;
	border-radius:3px;
	margin-top:5px;
	padding:10px;
}

.ui-mobile #wb-main-in h1{
	margin-bottom:0 !important;
}

h2,h3,h4,h5,h6,p,blockquote,table,form,img,pre{
	margin-left:0;
	margin-right:0;
	text-shadow:none;
}

.clear{
	clear:both;
	display:block;
	height:0;
	overflow:hidden;
	visibility:hidden;
	width:0;
	margin:0;
}

.ui-mobile input[type="submit"],.ui-mobile [type="reset"],.ui-mobile input[type="button"]{
	background:none;
	border:none;
}

#gcwu-tctr .gcwu-tc{
	border-right:1px solid #999;
	padding:0 9px 0 0;
}

#gcwu-tctr .gcwu-tr{
	padding-left:6px;
}

#gcwu-tctr li{
	display:inline;
}

#gcwu-gcft{
	background:none repeat scroll 0 0 #040707;
	clear:both;
	margin:0;
	padding:10px;
}

#gcwu-gcft a{
	color:#fff !important;
	font-size:0.9em;
	text-shadow:none;
}

#gcwu-gcft a span{
	font-weight:700;
	font-size:1.1em;
}

img{
	max-width:100%;
	height:auto;
	display:block;
}

#gcwu-gcnb-fip li{
	display:none;
	padding-bottom:5px;
}

#gcwu-gcnb-fip #gcwu-gcnb-lang{
	display:inline;
	float:right;
}

#gcwu-gcnb-lang a{
	color:#222;
	text-decoration:none;
	background:#eee;
	border:1px solid #ddd;
	border-radius:2px;
	float:right;
	font-weight:400;
	padding:3px;
}

#gcwu-srch-submit{
	min-height:22px;
	display:inline;
	margin:0;
}

.ui-mobile #gcwu-srch{
	box-shadow:none;
}

#gcwu-psnb h2,#gcwu-srchbx h2{
	text-shadow:0 1px 1px #044062;
	border-right:#15598F;
	background:#4E7EB7;
	background-image:-webkit-gradient(linear,left top,left bottom,from(#5383BC),to(#225C96));
	background-image:-webkit-linear-gradient(#5383BC,#225C96);
	background-image:-moz-linear-gradient(#5383BC,#225C96);
	background-image:-ms-linear-gradient(#5383BC,#225C96);
	background-image:-o-linear-gradient(#5383BC,#225C96);
	background-image:linear-gradient(#5383BC,#225C96);
	color:#fff;
	text-align:center;
	font-size:0.9em;
	text-transform:xxxcapitalize;
	position:relative;
	font-weight:700;
	margin:0;
	padding:0.6em 33px 0.6em 2px;
	border-top:1px solid #8fb9d6;
	border-bottom:1px solid #044062;
	border-left:1px solid #124B79;
	border-right:none;
}

.ui-mobile #wb-sec{
	display:none;
}

.wet-boew-menubar a{
	border-top:1px solid #ccc;
	border-bottom:1px solid #ccc;
	color:#222;
	text-decoration:none;
	display:block;
	position:relative;
	z-index:200;
	font-weight:700;
	text-align:center;
	background:#eee;
	padding:0.8em 0 0.9em;
}

.wet-boew-menubar ul{
	list-style-type:none;
	position:relative;
	z-index:1;
	margin:0;
	padding:0;
}

.wet-boew-menubar li h3{
	font-weight:400;
	font-size:1em;
	margin:0;
	padding:0;
}

.wet-boew-menubar li{
	color:#333;
	text-shadow:0 1px 0 #fff;
	position:relative;
	z-index:1;
}

#gcwu-bnr,#wb-core{
	clear:both;
}

#gcwu-psnb,#gcwu-srchbx{
	width:50%;
	float:right;
	border-top:1px solid #044062;
}

.ui-mobile #gcwu-psnb,.ui-mobile #gcwu-srchbx{
	border-top:none;
}

#gcwu-priorities ul:after,#gcwu-date-mod:after,#gcwu-gcft ul:after,#wb-head:after{
	content:".";
	display:block;
	height:0;
	clear:both;
	visibility:hidden;
}

.ui-mobile .ui-content{
	padding:0 15px;
}

#wb-main-in .span-1,#wb-main-in .span-2,#wb-main-in .span-3,#wb-main-in .span-4,#wb-main-in .span-5,#wb-main-in .span-6,#wb-main-in .span-7,#wb-main-in .span-8,#wb-main-in .span-9,#wb-main-in .span-10,#wb-main-in .span-11,#wb-main-in .span-12{
	margin-bottom:20px;
}

.ui-mobile .wet-boew-menubar a{
	padding:0;
}

.wet-boew-menubar li .mb-sm,#gcwu-bc,#gcwu-psnb #gcwu-psnb-in,#gcwu-srchbx form,.wet-boew-menubar li .mb-sm *{
	display:none;
}

#gcwu-srch-submit{
	min-height: 22px;
}

.mobile-hide{
	display:none !important;
}

#jqmobile-wet-boew-search h1,#jqmobile-wet-boew-menubar h1, #jqmobile-wet-boew-search h2,#jqmobile-wet-boew-menubar h2,#jqmobile-wet-boew-menubar h3, #jqmobile-wet-boew-menubar h4,#jqmobile-wet-boew-menubar .top-level{
	border:none;
}

#jqmobile-wet-boew-menubar h3, #jqmobile-wet-boew-menubar h4, #jqmobile-wet-boew-menubar .top-level{
	font-size:1em;
}

#jqmobile-wet-boew-menubar h3 a:link, #jqmobile-wet-boew-menubar h4 a:link, #jqmobile-wet-boew-menubar .top-level a:link{
	text-decoration: none}

#jqmobile-wet-boew-menubar h3.top-section{
	font-size:1.2em;
}

#jqmobile-wet-boew-menubar .ui-content .ui-listview {
	margin:0;
}

#jqmobile-wet-boew-menubar h3 .ui-btn-inner,#jqmobile-wet-boew-menubar h4 .ui-btn-inner,#jqmobile-wet-boew-menubar .top-level .ui-btn-inner{
	white-space:normal;
}

#jqmobile-wet-boew-menubar h3 .ui-btn-icon-top .ui-btn-inner,#jqmobile-wet-boew-menubar h4 .ui-btn-icon-top .ui-btn-inner,#jqmobile-wet-boew-menubar .top-level .ui-btn-icon-top .ui-btn-inner{
	padding:0.6em 33px 0.7em 10px;
}

#jqmobile-wet-boew-menubar .ui-btn-icon-right .ui-btn-inner {
	padding-left: 40px;
}

#jqmobile-wet-boew-menubar .ui-btn{
	margin:0;
	text-align:left;
}

#jqmobile-wet-boew-menubar .ui-li{
	border-width:1px 1px 0 1px;
}

#jqmobile-wet-boew-menubar .ui-corner-bottom {
	border-bottom-width:1px;
}

#jqmobile-wet-boew-menubar h2{
	color:#555;
}

#jqmobile-wet-boew-menubar div.ui-collapsible-set + h2{
	border-top:3px groove #fff;
	padding-top:8px;
	margin-top:23px;
}

#jqmobile-wet-boew-menubar .ui-content h2 + ul.ui-listview{
	margin-bottom:1em;
}

#jqmobile-wet-boew-menubar .top-section a{
	margin:0 0 5px;
	border-radius:0;
	-moz-border-radius:0;
	-webkit-border-radius:0;
}

#jqmobile-wet-boew-menubar .ui-collapsible-heading {
	margin:0;
}

#jqmobile-wet-boew-menubar .top-level.ui-btn-corner-all {
	border-radius:0.6em;
}

#gcwu-bnr{
	background:#4E7EB7;
	background: -moz-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
	background:-webkit-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
}
/* ... */

